# cpp-fontconfig

./: CMakeLists.txt  bootstrap_r.sh  doxy.config.in
cmake/Modules/: CMakeLists.txt  FindCppFontConfig.cmake  FindFontconfig.cmake
docs/pages/: mainpage.h
include/: CMakeLists.txt
include/cppfontconfig/: Atomic.h  Blanks.h  Cache.h  CharSet.h  Config.h  Constant.h  FontSet.h  LangSet.h  Matrix.h  ObjectSet.h  ObjectType.h  Pattern.h  RefPtr.h  StrList.h  StrSet.h  String.h  TypeMap.h  common.h  cppfontconfig.h  file.h  freetype.h  init.h  name.h  string.h
include/fontconfigmm/: Atomic.h  Blanks.h  Cache.h  CharSet.h  Config.h  Constant.h  FontSet.h  LangSet.h  Matrix.h  ObjectSet.h  ObjectType.cpp  ObjectType.h  Pattern.h  StrList.h  StrSet.h  String.h  TypeMap.h  common.h  file.h  fontconfigmm.h  freetype.h  init.h  name.h  string.h
src/: Atomic.cpp  Blanks.cpp  CMakeLists.txt  Cache.cpp  CharSet.cpp  Config.cpp  Constant.cpp  FontSet.cpp  LangSet.cpp  Matrix.cpp  ObjectSet.cpp  ObjectType.cpp  Pattern.cpp  StrList.cpp  StrSet.cpp  String.cpp  TypeMap.cpp  common.cpp  file.cpp  freetype.cpp  init.cpp  macros.h  name.cpp  string.cpp
test/tutorial/: CMakeLists.txt  tutorial.cpp
